Enhance settings UI by adding a consistent action button style for save operations across appearance, profile, shortcuts, and locale settings

--- a/settings-employee.html
+++ b/settings-employee.html
@@ -76,7 +76,7 @@
             </label>
           </div>
           <div class="form-row">
-            <button id="appearanceSave" type="button">Save Appearance</button>
+            <button id="appearanceSave" type="button" class="settings-action">Save Appearance</button>
           </div>
         </div>
 
@@ -94,7 +94,7 @@
             </label>
           </div>
           <div class="form-row">
-            <button id="profileSave" type="button">Save Profile</button>
+            <button id="profileSave" type="button" class="settings-action">Save Profile</button>
           </div>
           <div style="font-size:0.9rem;color:#6b7280;">Only the most recent picture is kept.</div>
           <div id="loginActivity" style="font-size:0.9rem;color:#6b7280;margin-top:8px;">Recent logins will appear here.</div>
@@ -112,7 +112,7 @@
             </label>
           </div>
           <div class="form-row">
-            <button id="shortcutsSave" type="button">Save Shortcuts</button>
+            <button id="shortcutsSave" type="button" class="settings-action">Save Shortcuts</button>
           </div>
         </div>
 
@@ -134,7 +134,7 @@
             </label>
           </div>
           <div class="form-row">
-            <button id="localeSave" type="button">Save Language &amp; Time</button>
+            <button id="localeSave" type="button" class="settings-action">Save Language &amp; Time</button>
           </div>
         </div>
 
