--- a/settings.html
+++ b/settings.html
@@ -77,7 +77,7 @@
               </label>
             </div>
             <div class="form-row">
-              <button id="appearanceSave" type="button">Save Appearance</button>
+              <button id="appearanceSave" type="button" class="settings-action">Save Appearance</button>
             </div>
           </div>
 
@@ -97,7 +97,7 @@
                   </label>
                 </div>
                 <div class="form-row">
-                  <button type="submit">Save Profile</button>
+                  <button type="submit" class="settings-action">Save Profile</button>
                   <button id="adminProfileClear" type="button" class="muted">Clear</button>
                 </div>
                 <div style="font-size:0.9rem;color:#6b7280;">Only the most recent picture is kept.</div>
@@ -118,7 +118,7 @@
               </label>
             </div>
             <div class="form-row">
-              <button id="shortcutsSave" type="button">Save Shortcuts</button>
+              <button id="shortcutsSave" type="button" class="settings-action">Save Shortcuts</button>
             </div>
           </div>
 
@@ -140,7 +140,7 @@
               </label>
             </div>
             <div class="form-row">
-              <button id="localeSave" type="button">Save Language &amp; Time</button>
+              <button id="localeSave" type="button" class="settings-action">Save Language &amp; Time</button>
             </div>
           </div>
 
