Add SKU options datalist and enhance item name filling functionality

--- a/order-register.html
+++ b/order-register.html
@@ -245,6 +245,7 @@
       </div>
     </main>
   </div>
+  <datalist id="order-sku-options"></datalist>
 
   <div id="orderReviewModal" class="modal hidden" role="dialog" aria-modal="true">
     <div class="modal-content">
