--- a/order-register.html
+++ b/order-register.html
@@ -45,8 +45,8 @@
 
       <section class="card" style="margin-bottom:12px;position:sticky;top:0;z-index:5;">
         <div class="mode-tabs">
-          <button class="mode-btn active" data-mode="order">Orders</button>
-          <button class="mode-btn" data-mode="reserve">Reservations</button>
+          <button class="mode-btn active" data-mode="order">Procurement</button>
+          <button class="mode-btn" data-mode="reserve">Allocation</button>
         </div>
       </section>
 
