--- a/login.html
+++ b/login.html
@@ -35,7 +35,7 @@
         <div class="form-row">
           <button type="submit">Login</button>
         </div>
-        <div style="font-size:0.9rem;color:#6b7280;">No account? <a href="register.html">Register</a> or <a href="tenant-create.html">Create a business</a></div>
+        <div style="font-size:0.9rem;color:#6b7280;">Need access? Contact your administrator.</div>
         <div id="login-error" style="color:#b91c1c;font-size:0.9rem;margin-top:8px;"></div>
       </form>
     </div>
