--- a/job-creator.html
+++ b/job-creator.html
@@ -77,9 +77,7 @@
             <div class="form-row">
               <button type="submit">Save Project</button>
               <button id="jobClearBtn" type="button" class="muted">Clear</button>
-              <button id="jobCancelEdit" type="button" class="muted" style="display:none;">Cancel Edit</button>
             </div>
-            <div id="jobEditMeta" class="muted-text" style="display:none;"></div>
           </form>
         </section>
 
@@ -169,6 +167,42 @@
         </section>
       </div>
     </main>
+  </div>
+
+  <div id="jobEditModal" class="modal hidden" role="dialog" aria-modal="true" aria-labelledby="jobEditTitle">
+    <div class="modal-content">
+      <div style="display:flex;justify-content:space-between;align-items:center;">
+        <h3 id="jobEditTitle" style="margin:0;">Edit Project</h3>
+        <button id="jobEditClose" class="muted" type="button">Close</button>
+      </div>
+      <p id="jobEditMeta" class="muted-text">Editing project:</p>
+      <form id="jobEditForm" class="inventory-form">
+        <div class="form-row">
+          <label>Project Code<input id="jobEditCode" required readonly></label>
+          <label>Display Name<input id="jobEditName" placeholder="Optional friendly name"></label>
+          <label>Status
+            <select id="jobEditStatus">
+              <option value="planned">Planned</option>
+              <option value="active">Active</option>
+              <option value="on-hold">On Hold</option>
+              <option value="complete">Complete</option>
+            </select>
+          </label>
+        </div>
+        <div class="form-row">
+          <label>Start Date<input id="jobEditStartDate" type="date"></label>
+          <label>End Date<input id="jobEditEndDate" type="date"></label>
+          <label>Location<input id="jobEditLocation" placeholder="Optional site/location"></label>
+        </div>
+        <div class="form-row">
+          <label>Notes<textarea id="jobEditNotes" rows="3" placeholder="Optional project notes, scope, or instructions"></textarea></label>
+        </div>
+        <div class="modal-actions">
+          <button type="submit">Update Project</button>
+          <button id="jobEditCancel" type="button" class="muted">Cancel</button>
+        </div>
+      </form>
+    </div>
   </div>
 
   <script src="js/utils.js"></script>
