Rename "History" links to "Audit" across multiple HTML files for consistency

--- a/field-purchase.html
+++ b/field-purchase.html
@@ -34,7 +34,7 @@
         <a class="active" href="field-purchase.html" data-role="employee">Field Purchases</a>
         <a href="settings.html" data-role="admin">Settings</a>
         <a href="settings-employee.html" data-role="employee">Settings</a>
-        <a href="item-history.html" data-role="admin">History</a>
+        <a href="item-history.html" data-role="admin">Audit</a>
       </nav>
     </aside>
 
