--- a/item-history.html
+++ b/item-history.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Item History</title>
+  <title>Audit</title>
   <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
@@ -32,13 +32,13 @@
 
         <a href="settings.html" data-role="admin">Settings</a>
         <a href="settings-employee.html" data-role="employee">Settings</a>
-        <a class="active" href="item-history.html" data-role="admin">History</a>
+        <a class="active" href="item-history.html" data-role="admin">Audit</a>
       </nav>
     </aside>
 
     <main class="main">
       <header class="topbar">
-        <h1>Item History (Admin)</h1>
+        <h1>Audit (Admin)</h1>
         <div class="topbar-right"><button id="logoutBtn" class="muted">Logout</button></div>
       </header>
 
