--- a/inventory-operations.html
+++ b/inventory-operations.html
@@ -52,7 +52,7 @@
 
       <a href="settings.html" data-role="admin">Settings</a>
       <a href="settings-employee.html" data-role="employee">Settings</a>
-      <a href="item-history.html" data-role="admin">History</a>
+      <a href="item-history.html" data-role="admin">Audit</a>
       <a href="dev-settings.html" data-dev-only style="display:none;">Dev Settings</a>
     </nav>
   </aside>
