--- a/job-creator.html
+++ b/job-creator.html
@@ -32,7 +32,7 @@
 
         <a href="settings.html" data-role="admin">Settings</a>
         <a href="settings-employee.html" data-role="employee">Settings</a>
-        <a href="item-history.html" data-role="admin">History</a>
+        <a href="item-history.html" data-role="admin">Audit</a>
       </nav>
     </aside>
 
