--- a/seller-admin.html
+++ b/seller-admin.html
@@ -32,7 +32,7 @@
         <a href="field-purchase.html" data-role="employee">Field Purchases</a>
         <a href="settings.html" data-role="admin">Settings</a>
         <a href="settings-employee.html" data-role="employee">Settings</a>
-        <a href="item-history.html" data-role="admin">History</a>
+        <a href="item-history.html" data-role="admin">Audit</a>
         <a href="dev-settings.html" data-dev-only style="display:none;">Dev Settings</a>
         <a class="active" href="seller-admin.html" data-dev-only>Seller Admin</a>
       </nav>
