Enhance job creator with action column and admin functionality in report rendering

--- a/job-creator.html
+++ b/job-creator.html
@@ -160,6 +160,7 @@
                 <th>Reserved</th>
                 <th>Net Usage</th>
                 <th>Items</th>
+                <th id="reportActionsHeader">Actions</th>
               </tr>
             </thead>
             <tbody></tbody>
