Remove data-role attribute from "Field Purchases" links for consistency across multiple HTML files

--- a/job-creator.html
+++ b/job-creator.html
@@ -28,7 +28,7 @@
         <a href="item-master.html" data-role="admin">Item Master</a>
         <a class="active" href="job-creator.html" data-role="admin">Project Manager</a>
         <a href="order-register.html" data-role="admin">Procurement &amp; Allocation</a>
-        <a href="field-purchase.html" data-role="employee">Field Purchases</a>
+        <a href="field-purchase.html" >Field Purchases</a>
 
         <a href="settings.html" data-role="admin">Settings</a>
         <a href="settings-employee.html" data-role="employee">Settings</a>
