--- a/field-purchase.html
+++ b/field-purchase.html
@@ -31,7 +31,7 @@
         <a href="item-master.html" data-role="admin">Item Master</a>
         <a href="job-creator.html" data-role="admin">Project Manager</a>
         <a href="order-register.html" data-role="admin">Procurement &amp; Allocation</a>
-        <a class="active" href="field-purchase.html" data-role="employee">Field Purchases</a>
+        <a class="active" href="field-purchase.html" >Field Purchases</a>
         <a href="settings.html" data-role="admin">Settings</a>
         <a href="settings-employee.html" data-role="employee">Settings</a>
         <a href="item-history.html" data-role="admin">Audit</a>
