--- a/field-purchase.html
+++ b/field-purchase.html
@@ -88,6 +88,7 @@
   </div>
 
   <script src="js/utils.js"></script>
+  <datalist id="purchase-item-options"></datalist>
   <script>
     document.addEventListener('DOMContentLoaded',()=>{
       if(window.utils){
