Add remember business code functionality to login form

--- a/login.html
+++ b/login.html
@@ -27,6 +27,12 @@
           <label>Business Code<input id="login-tenant" placeholder="e.g. acme" required autocomplete="off"></label>
         </div>
         <div class="form-row">
+          <label style="display:flex;align-items:center;gap:8px;">
+            <input id="login-remember-tenant" type="checkbox">
+            Remember business code
+          </label>
+        </div>
+        <div class="form-row">
           <label>Email<input id="login-email" type="email" required autocomplete="off"></label>
         </div>
         <div class="form-row">
