--- a/login.html
+++ b/login.html
@@ -15,6 +15,9 @@
     label{color:#cbd5f5;}
     input{background:#0f172a;color:#e5e7eb;border:1px solid #1f2937;}
     button{background:linear-gradient(135deg,#0f7a57,#14a26d);border:none;color:#fff;font-weight:800;box-shadow:0 10px 30px rgba(20,162,109,0.35);}
+    .remember-row{margin-top:-6px;}
+    .remember-row label{display:flex;align-items:center;gap:10px;font-size:0.9rem;color:#cbd5f5;}
+    .remember-row input[type="checkbox"]{width:16px;height:16px;margin:0;accent-color:#14a26d;border-radius:4px;box-shadow:0 0 0 1px rgba(255,255,255,0.12);}
   </style>
 </head>
 <body>
@@ -26,8 +29,8 @@
         <div class="form-row">
           <label>Business Code<input id="login-tenant" placeholder="e.g. acme" required autocomplete="off"></label>
         </div>
-        <div class="form-row">
-          <label style="display:flex;align-items:center;gap:8px;">
+        <div class="form-row remember-row">
+          <label>
             <input id="login-remember-tenant" type="checkbox">
             Remember business code
           </label>
