--- a/login.html
+++ b/login.html
@@ -15,9 +15,9 @@
     label{color:#cbd5f5;}
     input{background:#0f172a;color:#e5e7eb;border:1px solid #1f2937;}
     button{background:linear-gradient(135deg,#0f7a57,#14a26d);border:none;color:#fff;font-weight:800;box-shadow:0 10px 30px rgba(20,162,109,0.35);}
-    .remember-row{margin-top:-6px;}
-    .remember-row label{display:flex;align-items:center;gap:10px;font-size:0.9rem;color:#cbd5f5;}
-    .remember-row input[type="checkbox"]{width:16px;height:16px;margin:0;accent-color:#14a26d;border-radius:4px;box-shadow:0 0 0 1px rgba(255,255,255,0.12);}
+    .auth-actions{align-items:center;justify-content:space-between;gap:12px;}
+    .auth-actions .remember-label{display:flex;align-items:center;gap:10px;font-size:0.85rem;color:#cbd5f5;flex:1;flex-direction:row;}
+    .auth-actions input[type="checkbox"]{width:16px;height:16px;margin:0;accent-color:#14a26d;border-radius:4px;box-shadow:0 0 0 1px rgba(255,255,255,0.12);}
   </style>
 </head>
 <body>
@@ -29,19 +29,17 @@
         <div class="form-row">
           <label>Business Code<input id="login-tenant" placeholder="e.g. acme" required autocomplete="off"></label>
         </div>
-        <div class="form-row remember-row">
-          <label>
-            <input id="login-remember-tenant" type="checkbox">
-            Remember business code
-          </label>
-        </div>
         <div class="form-row">
           <label>Email<input id="login-email" type="email" required autocomplete="off"></label>
         </div>
         <div class="form-row">
           <label>Password<input id="login-password" type="password" required autocomplete="new-password"></label>
         </div>
-        <div class="form-row">
+        <div class="form-row auth-actions">
+          <label class="remember-label">
+            <input id="login-remember-tenant" type="checkbox">
+            Remember business code
+          </label>
           <button type="submit">Login</button>
         </div>
         <div style="font-size:0.9rem;color:#6b7280;">Need access? Contact your administrator.</div>
