Refactor report rendering to use cards instead of a table layout

--- a/job-creator.html
+++ b/job-creator.html
@@ -147,24 +147,7 @@
             <button id="reportExpandAll" type="button" class="muted">Expand All</button>
             <button id="reportExportBtn" type="button" class="muted">Export CSV</button>
           </div>
-          <table id="reportTable">
-            <thead>
-              <tr>
-                <th>Project</th>
-                <th>Status</th>
-                <th>Start</th>
-                <th>End</th>
-                <th>Location</th>
-                <th>On Hand</th>
-                <th>Checked Out</th>
-                <th>Reserved</th>
-                <th>Net Usage</th>
-                <th>Items</th>
-                <th id="reportActionsHeader">Actions</th>
-              </tr>
-            </thead>
-            <tbody></tbody>
-          </table>
+          <div id="reportCards" class="report-cards"></div>
         </section>
       </div>
     </main>
